DMP-3988 Delete ARM's Response file when EOD is no longer available in DARTS
Added code to delete the response files CR, UF and or IL if there is no EOD found but they have been found in pairs